<resources>
    <string name="app_name">J2-Qr La Tienda</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perfil">Perfil</string>
    <string name="cesta">Cesta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="subrayado"><u> - Recupera Contraseña - </u></string>


    <string name="my_text"><u>Recupera Contraseña </u></string>
    <string name="seginte"><u>Seguinte --> </u></string>

    <!--    butones del registro-->
    <string name="dadtosPersonal">Datos Personal</string>
    <string name="dadtosResidencial">Datos Residencial</string>
    <string name="dadtosPago">Datos de Pago</string>

    <string name="localidad"><u>Barcelona</u></string>

    <string name="idioma"><u>España</u></string>
    <string name="ciudad">Ciudad</string>
    <string name="prov_ncia">Província</string>




    <!--     estring -->

<!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
<!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
<!--    <string name="nav_header_title">Android Studio</string>-->
<!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
<!--    <string name="nav_header_desc">Navigation header</string>-->
<!--    <string name="action_settings">Settings</string>-->

<!--    BUTONES-->
    <string name="iniciar_secion">Iniciar Secion</string>
    <string name="registrarse">Registrarse</string>
    <!--    b factura -->
    <string name="enviarCasa">Enviar a Casa</string>
    <string name="recojerTienda">Recojer en la Tienda</string>
    <string name="leer_produto_qr">Scanner Produto</string>
    <string name="a_adir_produto_a_la_cesta">Añadir produto a la Cesta</string>

    <string name="inicio_info"> <p>A pesar de las tecnologías que nos estamos acostumbrados, pleno final del siglo XXI, todavía hay personas que les gusta tener mas libertad en la hora de elegir sus gustos en la compra. </p>  <p>Para tal, esta aplicación es perfeta para este tipo de comportamiento.  Consiste en que el <strong><u>usuario</u></strong> con su móvil pueda hacer de manera más cómoda la elección de los productos sin tener hacer mucho esfuerzo. Venga, pruebatela!  </p></string>

</resources>
