<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.Proyeto_DAM2_Tienda_Qr.vista.tienda.Activity_inicio">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="J2-Qr La Tienda"
        android:textColor="#070505"
        android:textSize="18sp"
        android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="301dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/tienda" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="15dp"

        android:fontFamily="serif"
        android:text="@string/inicio_info" />

<!--        <ImageView-->
<!--            android:id="@+id/imgMap"-->
<!--            android:layout_width="287dp"-->
<!--            android:layout_height="151dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@drawable/map" />-->

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_raund"
        android:text="@string/iniciar_secion"
        android:textAllCaps="false"
        android:textColor="@color/color7"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_recuperaPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/button_raund_reg"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textSize="18sp" />

    </LinearLayout>
</ScrollView>