<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.Proyeto_DAM2_Tienda_Qr.vista.usuario.activitys.Activity_Registro">

    <FrameLayout
        android:id="@+id/contenedorFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp">

    </FrameLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_raund"
        android:textColor="@color/color7"
        android:textAllCaps="false"
        android:text="Guardar" />

    <Button
        android:id="@+id/btn_VolverInicio"
        android:background="@drawable/button_raund_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAllCaps="false"
        android:text="Volver" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/datosPersonal"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_raund_reg"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/dadtosPersonal"
            android:textAllCaps="false"
            android:textSize="12sp"
            tools:ignore="OnClick" />


        <Button
            android:id="@+id/datosResidencial"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_raund_reg"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/dadtosResidencial"
            android:textAllCaps="false"
            android:textSize="12sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/datosPago"
            style="?android:borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_raund_reg"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/dadtosPago"
            android:textAllCaps="false"
            android:textSize="12sp"
            tools:ignore="OnClick" />


    </LinearLayout>

</LinearLayout>